--- a/Wisnuc-iOS-Swift/Source/Localizable/zh-Hans.lproj/Localizable.strings
+++ b/Wisnuc-iOS-Swift/Source/Localizable/zh-Hans.lproj/Localizable.strings
@@ -8,3 +8,5 @@
 "wechat_login" = "WeChat Login";
 "login" = "Login";
 "my_station" = "My Device";
+"add_Device" = "Add Device";
+"station_checking" = "checking";
