files root View

--- a/Wisnuc-iOS-Swift/Source/Localizable/en.lproj/Localizable.strings
+++ b/Wisnuc-iOS-Swift/Source/Localizable/en.lproj/Localizable.strings
@@ -13,3 +13,5 @@
 "station_checking" = "checking";
 "confirm" = "confirm";
 "power_off" = "Power Off";
+"files_folders" = "folders";
+"files_name" = "NAME";
