--- a/Wisnuc-iOS-Swift/Source/Localizable/en.lproj/Localizable.strings
+++ b/Wisnuc-iOS-Swift/Source/Localizable/en.lproj/Localizable.strings
@@ -14,5 +14,5 @@
 "confirm" = "confirm";
 "power_off" = "Power Off";
 "files_folders" = "folders";
-"files_name" = "NAME";
+"NAME" = "NAME";
 "Rename" = "Rename";
