--- a/Wisnuc-iOS-Swift/Source/Localizable/zh-Hans.lproj/Localizable.strings
+++ b/Wisnuc-iOS-Swift/Source/Localizable/zh-Hans.lproj/Localizable.strings
@@ -18,6 +18,7 @@
 "station_checking" = "等待审核";
 "confirm" = "确定";
 "power_off" = "关机";
+"Loading..." = "加载中...";
 
 //文件
 "Folders" = "文件夹";
@@ -40,6 +41,7 @@
 
 //任务
 "Delete" = "删除";
+
 
 
 
