--- a/Wisnuc-iOS-Swift/Source/Localizable/zh-Hans.lproj/Localizable.strings
+++ b/Wisnuc-iOS-Swift/Source/Localizable/zh-Hans.lproj/Localizable.strings
@@ -19,7 +19,7 @@
 "Select..." = "选择";
 "Select all" = "选择全部";
 "my_station" = "我的设备";
-"add_Device" = "添加设备";
+"Add Device" = "添加设备";
 "station_checking" = "等待审核";
 "confirm" = "确定";
 "power_off" = "关机";
