--- a/Wisnuc-iOS-Swift/Source/Localizable/en.lproj/Localizable.strings
+++ b/Wisnuc-iOS-Swift/Source/Localizable/en.lproj/Localizable.strings
@@ -13,6 +13,7 @@
 "Setting Language..." = "Setting Language...";
 
 "Cancel" = "Cancel";
+"Failed" = "Failed";
 
 "wechat_login" = "WeChat Login";
 "login" = "Login";
